fix: eliminate skeleton loader ghosting behind transparent car images

--- a/style.css
+++ b/style.css
@@ -2274,6 +2274,7 @@ body {
 }
 
 .skeleton-img {
+    transition: opacity 0.3s ease;
     position: absolute;
     width: 80%;
     height: 300px;
